[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-macros = "0.3.4"
bytes = "1.4.0"
futures = "0.3.26"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
